[package]
name = "pastau_bench"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
blake3 = "1"
bls12_381 = "0.8"
chacha20poly1305 = "0.10"
curve25519-dalek = { version = "4", features = ["alloc", "rand_core"] }
ff = "0.13"
group = "0.13"
rand_chacha = "0.3"
rand_core = "0.6"
subtle = "2"

