[package]
name = "upspa_quorum_bench"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
blake3 = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
curve25519-dalek = { version = "4", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_chacha = "0.3"
rand_core = "0.6"

